# metaxxa

./: CMakeLists.txt  README.md  buildheaderonly.py  index.html  metaxxa.hpp  runtests.bat  runtests.sh
cmakemodules/: definitions.cmake  include_directories.cmake  libraries.cmake  platform.cmake  sources.cmake  targets.cmake  util.cmake
include/: FilterOfStdTuple.h  Function.h  Tuple.h  Type.h  applyresult.h  concat.h  def.h  enablefnif.h  enableif.h  if.h  indexrange.h  isapplicable.h  isarrayof.h  isinstantiationof.h  isvalid.h  list.h  literal.h  literallist.h  makefunctiontype.h  metaxxa.h  minimalargument.h  minimaltype.h  moveparameters.h  nottype.h  parameterscount.h  sizeconstant.h  (+19 more)
tests/: CMakeLists.txt  TestFunction.h  TestIsExplicitlyConstructible.h  TestIsImplicitlyConstructible.h  TestMetaxxa.h  TestMoveFunctionArgumentTypes.h  TestReferenceWrapper.h  TestTuple.h  TestType.h  applyresult.cpp  if.cpp  indexrange.cpp  isapplicable.cpp  isarrayof.cpp  isinstatiationof.cpp  isvalid.cpp  list.cpp  literallist.cpp  main.cpp  main_old.cpp  makefunctiontype.cpp  minimalargument.cpp  minimaltype.cpp  moveparameters.cpp  parameterscount.cpp  statictuple.cpp  switch.cpp  tests.h  times.cpp  tuple.cpp  type.cpp  typeif.cpp  typeorref.cpp  typeswitch.cpp  typetuple.cpp
tests/algorithm/: algorithm.cpp  apply.cpp  concat.cpp  contains.cpp  every.cpp  filter.cpp  find.cpp  indexfilter.cpp  invokefunctions.cpp  map.cpp  skipfirst.cpp  skiplast.cpp  skiprange.cpp  takefirst.cpp  takelast.cpp  takerange.cpp  unique.cpp
tests/cmakemodules/: sources.cmake  util.cmake
(+86 files in other folders)
