CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
PROJECT(metaxxa-tests)

INCLUDE(${CMAKE_CURRENT_LIST_DIR}/cmakemodules/include_directories.cmake)
INCLUDE(${CMAKE_CURRENT_LIST_DIR}/cmakemodules/sources.cmake)
INCLUDE(${CMAKE_CURRENT_LIST_DIR}/cmakemodules/util.cmake)

INCLUDE_DIRECTORIES(${METAXXA_TESTS_INCLUDE_DIRECTORIES})

REQUIRE_CXX_17()

ADD_EXECUTABLE(metaxxa-tests ${METAXXA_TESTS_SOURCES})