CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
PROJECT(metaxxa-tests)

INITIALIZE_SOURCE_GROUPS(${METAXXA_TESTS_SOURCES})

# Require libc++ on linux
IF(UNIX AND NOT APPLE)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
ENDIF()

INCLUDE_DIRECTORIES(${METAXXA_TESTS_INCLUDE_DIRECTORIES})
ADD_EXECUTABLE(metaxxa-tests ${METAXXA_TESTS_SOURCES})
ADD_DEPENDENCIES(metaxxa-tests make_header_only)